--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
       - master
-  workflow_dispatch: # MUST have NO indentation (only two spaces less than 'pull_request')
+  workflow_dispatch:
   
 jobs:
   ai_pr_review:
