--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -6,7 +6,7 @@ on:
       - main
       - master
   workflow_dispatch:
-  
+
 jobs:
   ai_pr_review:
     runs-on: ubuntu-latest
@@ -28,7 +28,7 @@ jobs:
           
       - name: Run PowerShell PR Review Script
         shell: pwsh
-        if: github.event_name == 'pull_request' # Recommended skip for manual run
+        if: github.event_name == 'pull_request'
         env:
           OPENAI_ENDPOINT: ${{ secrets.OPENAI_ENDPOINT }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
