--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -45,20 +45,20 @@ jobs:
         # Install Pylint for RAG/Context
         pip3 install pylint
     - name: 🚀 Deploy GPT-4o Model
-      uses: azure/cli@v1
-      with:
-        inlineScript: |
-          echo "Starting model deployment based on hardcoded values..."
-          az cognitiveservices account deployment create \
-            --resource-group RG \
-            --name expact \
-            --deployment-name gpt4o-deploy \
-            --model-name gpt-4o \
-            --model-version "2024-11-20" \
-            --model-format OpenAI \
-            --sku-capacity 1 \
-            --sku-name "Standard"
-          echo "Deployment task complete."
+      shell: bash
+      run: |
+        echo "Starting model deployment based on hardcoded values..."
+        # Running the az command directly in the shell after azure/login@v1 ensures authentication context is available.
+        az cognitiveservices account deployment create \
+          --resource-group RG \
+          --name expact \
+          --deployment-name gpt4o-deploy \
+          --model-name gpt-4o \
+          --model-version "2024-11-20" \
+          --model-format OpenAI \
+          --sku-capacity 1 \
+          --sku-name "Standard"
+        echo "Deployment task complete."
     - name: Run PowerShell PR Review Script
       shell: pwsh
       if: github.event_name == 'pull_request'
