--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -1,54 +1,50 @@
-name: 🤖 AI Pull Request Review (PowerShell + RAG)
+name: "🤖 AI Pull Request Review (PowerShell + RAG)"
 
 on:
-  # Trigger on Pull Requests targeting main or master
   pull_request:
     branches:
       - main
       - master
-
-  # Trigger on pushes (after merges) to main or master
   push:
     branches:
       - main
       - master
 
-# 🛑 Ensure single active PR review workflow per PR
+# Ensure only one workflow run in-progress for a given workflow/run-id
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.run_id }}
+  group: ${{ github.workflow }}-${{ github.run_id }}
   cancel-in-progress: true
 
 jobs:
   # ============================================================
-  # 🧠 JOB 1: AI PR Review (runs ONLY on Pull Requests)
+  # JOB 1: AI PR Review (runs ONLY on Pull Requests)
   # ============================================================
   ai_pr_review:
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'pull_request' }}
-
     permissions:
       contents: read
       pull-requests: write
 
     steps:
-      - name: 🛠️ Checkout code
+      - name: "🛠️ Checkout code"
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # fetch all history for diff accuracy
+          fetch-depth: 0
 
-      - name: ⚙️ Setup Tools (Python, SQLite, Pylint)
+      - name: "⚙️ Setup Tools (Python, SQLite, Pylint)"
         run: |
           sudo apt-get update
           sudo apt-get install -y python3 python3-pip sqlite3
           pip3 install pylint
 
-      - name: 🔐 Azure Login for Deployment
+      - name: "🔐 Azure Login for Deployment"
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
           enable-AzPSSession: true
 
-      - name: 🚀 Deploy GPT-4o Model
+      - name: "🚀 Deploy GPT-4o Model"
         shell: bash
         run: |
           echo "Starting model deployment based on hardcoded values..."
@@ -67,7 +63,7 @@ jobs:
 
           echo "✅ Deployment task complete."
 
-      - name: 🧩 Run PowerShell PR Review Script
+      - name: "🧩 Run PowerShell PR Review Script"
         shell: pwsh
         env:
           OPENAI_ENDPOINT: ${{ secrets.OPENAI_ENDPOINT }}
@@ -80,25 +76,24 @@ jobs:
           pwsh ./scripts/ai_pr_review_serial.ps1 -PR_NUMBER $env:PR_NUMBER -REPO $env:REPO
 
   # ============================================================
-  # 🚀 JOB 2: Post-Merge Pipeline (runs ONLY on pushes to main/master)
+  # JOB 2: Post-Merge Pipeline (runs ONLY on pushes to main/master)
   # ============================================================
   post_merge_pipeline:
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') }}
-    needs: [ai_pr_review]
 
     steps:
-      - name: 🛠️ Checkout main/master branch
+      - name: "🛠️ Checkout main/master branch"
         uses: actions/checkout@v4
 
-      - name: 🔐 Azure Login for Post-Merge
+      - name: "🔐 Azure Login for Post-Merge"
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
           enable-AzPSSession: true
 
-      - name: 🧪 Example: Run Full End-to-End Tests
+      - name: "🧪 Example: Run Full End-to-End Tests"
         run: echo "✅ Code merged. Running full integration and end-to-end tests..."
 
-      - name: 🚀 Example: Deploy to Staging Environment
+      - name: "🚀 Example: Deploy to Staging Environment"
         run: echo "🚀 Deployment process started for main/master branch!"
