--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -10,16 +10,19 @@ on:
       - main
       - master
 
-# single active workflow run per workflow/run-id
+# 🛑 Single Active PR Control 🛑
 concurrency:
-  group: "${{ github.workflow }}-${{ github.run_id }}"
+  # Uses the PR number for PR events to ensure only the latest commit is reviewed.
+  # Uses the run ID for push events (merges).
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.run_id }}
   cancel-in-progress: true
 
 jobs:
+  # JOB 1: AI PR Review (Runs ONLY on Pull Requests)
   ai_pr_review:
     name: AI PR Review
     runs-on: ubuntu-latest
-    # only run this job for pull_request events
+    # Only run this job for pull_request events
     if: ${{ github.event_name == 'pull_request' }}
     permissions:
       contents: read
@@ -74,10 +77,14 @@ jobs:
         run: |
           pwsh ./scripts/ai_pr_review_serial.ps1 -PR_NUMBER $env:PR_NUMBER -REPO $env:REPO
 
+  # JOB 2: Post-Merge Pipeline (Runs ONLY on Push to main/master)
   post_merge_pipeline:
     name: Post-Merge Pipeline
     runs-on: ubuntu-latest
-    # only run this job on push to main or master
+    # CRITICAL FIX: Add needs dependency to link the jobs and help the parser
+    needs: ai_pr_review
+    
+    # Only run this job on push to main or master
     if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') }}
 
     steps:
