--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -3,8 +3,8 @@ name: AI Pull Request Review (PowerShell + RAG)
 on:
   pull_request:
     branches:
-      - main
-      - master
+    - main
+    - master
   push:
     branches:
     - main
@@ -31,28 +31,25 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
-    # 🟢 Step 1: Setup Tools (Python, SQLite, Pylint)
     - name: Setup Tools (Python, SQLite, Pylint)
       run: |
         sudo apt-get update
-        sudo apt-get install -y python3 python3-pip
-        sudo apt-get install -y sqlite3 # For DB logging
-        pip3 install pylint # For RAG/Context
+        sudo apt-get install -y python3 python3-pip sqlite3
+        pip3 install pylint
 
-    # ⭐ Step 2: Login to Azure (CRITICAL: Required for subsequent 'az' commands)
     - name: Azure Login for Deployment
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
         enable-AzPSSession: true
 
-    # ⭐ Step 3: Deploy GPT-4o Model to Azure OpenAI#
-    - name: 🚀 Deploy GPT-4o Model
+    - name: Deploy GPT-4o Model
       shell: bash
       run: |
-        echo "Starting model deployment based on hardcoded values..."
-        # Verify login and set the subscription context explicitly.
+        echo "Starting model deployment..."
         az account show --query name -o tsv || true
         az account set --subscription "9e6baf99-22ca-4234-948e-7d4a9f8ccd32"
 
@@ -65,17 +62,43 @@ jobs:
           --model-format OpenAI \
           --sku-capacity 1 \
           --sku-name "Standard"
+
         echo "Deployment task complete."
 
-    # ⭐ Step 4: Run PowerShell PR Review Script (The main logic)
     - name: Run PowerShell PR Review Script
       shell: pwsh
-      if: github.event_name == 'pull_request'
       env:
         OPENAI_ENDPOINT: ${{ secrets.OPENAI_ENDPOINT }}
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        OPENAI_DEPLOYMENT_NAME: ${{ secrets.OPENAI_DEPLOYMENT_NAME }} # Reverting to using the secret value
+        OPENAI_DEPLOYMENT_NAME: ${{ secrets.OPENAI_DEPLOYMENT_NAME }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         PR_NUMBER: ${{ github.event.pull_request.number }}
         REPO: ${{ github.repository }}
-      run: pwsh ./scripts/ai_pr_review_serial.ps1 -PR_NUMBER $env:PR_NUMBER -REPO $env:REPO
+      run: |
+        pwsh ./scripts/ai_pr_review_serial.ps1 -PR_NUMBER $env:PR_NUMBER -REPO $env:REPO
+
+  # JOB 2: Post-Merge Pipeline (Runs ONLY on Push to main/master)
+  post_merge_pipeline:
+    name: Post-Merge Pipeline
+    runs-on: ubuntu-latest
+    # CRITICAL FIX: Add needs dependency to link the jobs and help the parser
+    needs: ai_pr_review
+
+    # Only run this job on push to main or master
+    if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') }}
+
+    steps:
+    - name: Checkout main/master branch
+      uses: actions/checkout@v4
+
+    - name: Azure Login for Post-Merge
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        enable-AzPSSession: true
+
+    - name: Run Full End-to-End Tests
+      run: echo "Code merged. Running full integration and end-to-end tests..."
+
+    - name: Deploy to Staging Environment
+      run: echo "Deployment process started for main/master branch!"
