--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -1,29 +1,20 @@
-name: AI Pull Request Review (PowerShell + RAG)
+name: 🤖 AI Pull Request Review (PowerShell + RAG)
 
 on:
   pull_request:
     branches:
     - main
     - master
-  push:
-    branches:
-    - main
-    - master
 
 # 🛑 Single Active PR Control 🛑
 concurrency:
-  # Uses the PR number for PR events to ensure only the latest commit is reviewed.
-  # Uses the run ID for push events (merges).
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.run_id }}
   cancel-in-progress: true
 
 jobs:
-  # JOB 1: AI PR Review (Runs ONLY on Pull Requests)
   ai_pr_review:
-    name: AI PR Review
     runs-on: ubuntu-latest
-    # Only run this job for pull_request events
-    if: ${{ github.event_name == 'pull_request' }}
+
     permissions:
       contents: read
       pull-requests: write
@@ -31,25 +22,28 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
 
+    # 🟢 Step 1: Setup Tools (Python, SQLite, Pylint)
     - name: Setup Tools (Python, SQLite, Pylint)
       run: |
         sudo apt-get update
-        sudo apt-get install -y python3 python3-pip sqlite3
-        pip3 install pylint
+        sudo apt-get install -y python3 python3-pip
+        sudo apt-get install -y sqlite3 # For DB logging
+        pip3 install pylint # For RAG/Context
 
+    # ⭐ Step 2: Login to Azure (CRITICAL: Required for subsequent 'az' commands)
     - name: Azure Login for Deployment
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
         enable-AzPSSession: true
 
-    - name: Deploy GPT-4o Model
+    # ⭐ Step 3: Deploy GPT-4o Model to Azure OpenAI#
+    - name: 🚀 Deploy GPT-4o Model
       shell: bash
       run: |
-        echo "Starting model deployment..."
+        echo "Starting model deployment based on hardcoded values..."
+        # Verify login and set the subscription context explicitly.
         az account show --query name -o tsv || true
         az account set --subscription "9e6baf99-22ca-4234-948e-7d4a9f8ccd32"
 
@@ -62,43 +56,17 @@ jobs:
           --model-format OpenAI \
           --sku-capacity 1 \
           --sku-name "Standard"
-
         echo "Deployment task complete."
 
+    # ⭐ Step 4: Run PowerShell PR Review Script (The main logic)
     - name: Run PowerShell PR Review Script
       shell: pwsh
+      if: github.event_name == 'pull_request'
       env:
         OPENAI_ENDPOINT: ${{ secrets.OPENAI_ENDPOINT }}
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        OPENAI_DEPLOYMENT_NAME: ${{ secrets.OPENAI_DEPLOYMENT_NAME }}
+        OPENAI_DEPLOYMENT_NAME: ${{ secrets.OPENAI_DEPLOYMENT_NAME }} # Reverting to using the secret value
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         PR_NUMBER: ${{ github.event.pull_request.number }}
         REPO: ${{ github.repository }}
-      run: |
-        pwsh ./scripts/ai_pr_review_serial.ps1 -PR_NUMBER $env:PR_NUMBER -REPO $env:REPO
-
-  # JOB 2: Post-Merge Pipeline (Runs ONLY on Push to main/master)
-  post_merge_pipeline:
-    name: Post-Merge Pipeline
-    runs-on: ubuntu-latest
-    # CRITICAL FIX: Add needs dependency to link the jobs and help the parser
-    needs: ai_pr_review
-
-    # Only run this job on push to main or master
-    if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') }}
-
-    steps:
-    - name: Checkout main/master branch
-      uses: actions/checkout@v4
-
-    - name: Azure Login for Post-Merge
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-        enable-AzPSSession: true
-
-    - name: Run Full End-to-End Tests
-      run: echo "Code merged. Running full integration and end-to-end tests..."
-
-    - name: Deploy to Staging Environment
-      run: echo "Deployment process started for main/master branch!"
+      run: pwsh ./scripts/ai_pr_review_serial.ps1 -PR_NUMBER $env:PR_NUMBER -REPO $env:REPO
