--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -5,7 +5,7 @@ on:
     branches:
     - main
     - master
-
+  workflow_dispatch:
 # 🛑 Single Active PR Control 🛑
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.run_id }}
