--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -55,7 +55,7 @@ jobs:
 
           az cognitiveservices account deployment create \
             --resource-group RG \
-            --name expact \
+            --name tty \
             --deployment-name gpt4o-deploy \
             --model-name gpt-4o \
             --model-version "2024-11-20" \
