--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -7,9 +7,9 @@ on:
       - main
       - master
     types: [opened, synchronize, reopened, closed]
-  push:
-    branches:
-      - ai-review-fix-pr 
+ # push:
+  #  branches:
+  #    - ai-review-fix-pr 
   # Manual run from Actions tab
   workflow_dispatch:
 
