--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -75,17 +75,23 @@ jobs:
         run: |
           pwsh ./scripts/ai_pr_review_serial.ps1 -PR_NUMBER $env:PR_NUMBER -REPO $env:REPO
 
+    
       - name: Check if Merge Succeeded
         id: merge_check
         shell: bash
         run: |
           sleep 5
           PR_NUMBER=${{ github.event.pull_request.number }}
-          STATUS=$(gh pr view $PR_NUMBER --json merged --jq '.merged')
-          echo "PR merged status: $STATUS"
-          echo "result=$STATUS" >> $GITHUB_OUTPUT
+          STATE=$(gh pr view $PR_NUMBER --json state --jq '.state')
+          echo "PR state: $STATE"
+          if [ "$STATE" = "MERGED" ]; then
+            echo "result=true" >> $GITHUB_OUTPUT
+          else
+            echo "result=false" >> $GITHUB_OUTPUT
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
   # =======================================================
   # 🚀 2️⃣ POST-MERGE DEPLOYMENT JOB
