JOb 2 logic chagned Ai review fix pr (#16)
* afd

* Update ai_pr_review_serial.ps1

* Update new.py

* Create new1.py

* Update ai_pr_review_serial.ps1

* Update ai-pr-review.yml

* Update ai-pr-review.yml

* Update ai-pr-review.yml

* Update ai_pr_review_serial.ps1

---------

Co-authored-by: shyam <user.name>

--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -1,23 +1,15 @@
 name: AI Pull Request Review (PowerShell + RAG)
 
 on:
-  # 🟢 1️⃣ Trigger for Pull Requests (AI Review)
   pull_request:
     branches:
       - main
       - master
     types: [opened, synchronize, reopened, closed]
 
-  # 🟢 2️⃣ Trigger for Post-Merge to master/main
-  push:
-    branches:
-      - main
-      - master
-
-  # 🟢 3️⃣ Manual Trigger from Actions Tab
+  # Manual trigger (still allowed)
   workflow_dispatch:
 
-# 🧩 Prevent duplicate concurrent runs
 concurrency:
   group: "${{ github.workflow }}-${{ github.run_id }}"
   cancel-in-progress: true
@@ -29,10 +21,13 @@ jobs:
   ai_pr_review:
     name: AI PR Review
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' || github.event_name == 'push' }}
+    if: ${{ github.event_name == 'pull_request' }}
     permissions:
       contents: write
       pull-requests: write
+
+    outputs:
+      merged: ${{ steps.merge_check.outputs.result }}
 
     steps:
       - name: Checkout code
@@ -40,7 +35,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Tools (Python, SQLite, Pylint)
+      - name: Setup Tools
         run: |
           sudo apt-get update
           sudo apt-get install -y python3 python3-pip sqlite3
@@ -55,8 +50,7 @@ jobs:
       - name: Deploy GPT-4o Model
         shell: bash
         run: |
-          echo "Starting model deployment..."
-          az account show --query name -o tsv || true
+          echo "Deploying model..."
           az account set --subscription "9e6baf99-22ca-4234-948e-7d4a9f8ccd32"
           az cognitiveservices account deployment create \
             --resource-group RG \
@@ -67,9 +61,9 @@ jobs:
             --model-format OpenAI \
             --sku-capacity 1 \
             --sku-name "Standard"
-          echo "Deployment task complete."
 
       - name: Run PowerShell AI PR Review Script
+        id: ai_review
         shell: pwsh
         env:
           OPENAI_ENDPOINT: ${{ secrets.OPENAI_ENDPOINT }}
@@ -81,19 +75,38 @@ jobs:
         run: |
           pwsh ./scripts/ai_pr_review_serial.ps1 -PR_NUMBER $env:PR_NUMBER -REPO $env:REPO
 
+    
+      - name: Check if Merge Succeeded
+        id: merge_check
+        shell: bash
+        run: |
+          sleep 5
+          PR_NUMBER=${{ github.event.pull_request.number }}
+          STATE=$(gh pr view $PR_NUMBER --json state --jq '.state')
+          echo "PR state: $STATE"
+          if [ "$STATE" = "MERGED" ]; then
+            echo "result=true" >> $GITHUB_OUTPUT
+          else
+            echo "result=false" >> $GITHUB_OUTPUT
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
   # =======================================================
   # 🚀 2️⃣ POST-MERGE DEPLOYMENT JOB
   # =======================================================
   post_merge_pipeline:
     name: Post-Merge Pipeline
+    needs: ai_pr_review
     runs-on: ubuntu-latest
-
-    # 🧠 Trigger when code is merged to master/main
-    if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') }}
+    if: ${{ needs.ai_pr_review.outputs.merged == 'true' }}
 
     steps:
-      - name: Checkout merged branch
+      - name: Checkout merged master
         uses: actions/checkout@v4
+        with:
+          ref: master
 
       - name: Azure Login for Post-Merge
         uses: azure/login@v1
@@ -103,7 +116,7 @@ jobs:
 
       - name: Run Full End-to-End Tests
         run: |
-          echo "✅ Code merged to master/main."
+          echo "✅ Code merged to master."
           echo "🧪 Running full integration and end-to-end tests..."
 
       - name: Deploy to Staging Environment
