--- a/.github/workflows/org-runner-status.yml
+++ b/.github/workflows/org-runner-status.yml
@@ -3,11 +3,11 @@ name: Organization Runner Status Check
 on:
   schedule:
     - cron: '0 * * * *'
-
+ workflow_dispatch:
 jobs:
   check-org-runners:
     runs-on: ubuntu-latest
-
+   
     steps:
       - name: Call GitHub org runners API
         run: |
