Update and rename main.yml to testsimpleworkflow_testrunner.yml

--- a/.github/workflows/testsimpleworkflow_testrunner.yml
+++ b/.github/workflows/testsimpleworkflow_testrunner.yml
@@ -10,7 +10,7 @@ jobs:
   test-runner:
     runs-on:
 
-      - NextOpsLVM05
+      - SelfRunnerLinux
 
     steps:
       - name: Check runner details
